# tsid-python

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  collision_test.py  perf_test.py  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml  python-publish.yml
src/tsidpy/: __init__.py  basen.py  tsid.py
tests/: collision_test.py  generator_test.py  perf_test.py  usage_test.py
tsid/: __init__.py  tsid.py
tsidpy/: __init__.py
