[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsidpy"
version = "1.1.0.1"
authors = [
  { name="Luis Medel", email="luis@luismedel.com" },
]
description = "A Python library for generating Time-Sorted Unique Identifiers (TSID)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luismedel/tsid-python"
